LucasPickering.slumber.879732105e0d8b2f8be3f66925f53691e79c277d
Running as unit: run-p881017-i5074708.scope; invocation ID: cd3b26f72e874e4089ce510aac4e3a41
    Updating `tuna` index
 Downloading crates ...
  Downloaded editor-command v2.0.0 (registry `tuna`)
  Downloaded rest_parser v0.1.7 (registry `tuna`)
  Downloaded persisted_derive v1.0.0 (registry `tuna`)
  Downloaded ratatui-crossterm v0.1.0-alpha.5 (registry `tuna`)
  Downloaded terminput-crossterm v0.3.3 (registry `tuna`)
  Downloaded ratatui-termwiz v0.1.0-alpha.5 (registry `tuna`)
  Downloaded kasuari v0.4.7 (registry `tuna`)
  Downloaded persisted v1.0.0 (registry `tuna`)
  Downloaded tree-sitter-highlight v0.25.4 (registry `tuna`)
  Downloaded oas3 v0.17.0 (registry `tuna`)
  Downloaded rusqlite_migration v2.1.0 (registry `tuna`)
  Downloaded terminput v0.5.3 (registry `tuna`)
  Downloaded ratatui v0.30.0-alpha.5 (registry `tuna`)
  Downloaded ratatui-core v0.1.0-alpha.6 (registry `tuna`)
  Downloaded tree-sitter v0.25.4 (registry `tuna`)
  Downloaded ratatui-widgets v0.3.0-alpha.5 (registry `tuna`)
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling libc v0.2.172
   Compiling autocfg v1.4.0
    Checking cfg-if v1.0.0
    Checking memchr v2.7.6
    Checking equivalent v1.0.2
    Checking itoa v1.0.15
   Compiling shlex v1.3.0
    Checking log v0.4.27
    Checking ryu v1.0.20
   Compiling cc v1.2.23
    Checking futures-core v0.3.31
    Checking once_cell v1.21.3
    Checking smallvec v1.15.0
    Checking pin-project-lite v0.2.16
    Checking stable_deref_trait v1.2.0
    Checking foldhash v0.1.5
    Checking allocator-api2 v0.2.21
    Checking hashbrown v0.16.1
   Compiling thiserror v2.0.12
   Compiling rustversion v1.0.20
   Compiling quote v1.0.40
   Compiling num-traits v0.2.19
    Checking hashbrown v0.15.3
   Compiling slab v0.4.9
    Checking futures-sink v0.3.31
    Checking mio v1.0.3
   Compiling syn v2.0.101
    Checking signal-hook-registry v1.4.5
   Compiling heck v0.5.0
   Compiling unicode-xid v0.2.6
    Checking futures-channel v0.3.31
    Checking zeroize v1.8.1
   Compiling serde_json v1.0.145
    Checking writeable v0.6.1
    Checking litemap v0.8.0
    Checking either v1.15.0
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking futures-io v0.3.31
    Checking base64 v0.22.1
    Checking socket2 v0.5.9
    Checking aho-corasick v1.1.3
   Compiling icu_normalizer_data v2.0.0
    Checking fnv v1.0.7
   Compiling icu_properties_data v2.0.1
    Checking itertools v0.13.0
   Compiling ring v0.17.14
    Checking rustls-pki-types v1.12.0
    Checking tracing-core v0.1.33
    Checking percent-encoding v2.3.1
    Checking unicode-width v0.2.0
    Checking hashlink v0.10.0
    Checking regex-syntax v0.8.5
   Compiling unicode-segmentation v1.12.0
   Compiling httparse v1.10.1
    Checking castaway v0.2.3
    Checking getrandom v0.2.16
   Compiling convert_case v0.7.1
   Compiling indoc v2.0.6
    Checking untrusted v0.9.0
    Checking static_assertions v1.1.0
    Checking form_urlencoded v1.2.1
    Checking itertools v0.14.0
    Checking lru v0.14.0
    Checking arraydeque v0.5.1
    Checking tower-service v0.3.3
    Checking utf8_iter v1.0.4
    Checking iana-time-zone v0.1.63
   Compiling vcpkg v0.2.15
    Checking try-lock v0.2.5
   Compiling rustls v0.23.27
    Checking indexmap v2.12.1
   Compiling pkg-config v0.3.32
    Checking unicode-truncate v2.0.0
    Checking option-ext v0.2.0
   Compiling getrandom v0.3.3
   Compiling libsqlite3-sys v0.33.0
    Checking dirs-sys v0.4.1
    Checking want v0.3.1
    Checking saphyr-parser v0.0.6
    Checking ordered-float v5.0.0
   Compiling lock_api v0.4.12
    Checking regex-automata v0.4.13
    Checking encoding_rs v0.8.35
   Compiling strsim v0.11.1
   Compiling libm v0.2.15
   Compiling signal-hook v0.3.18
   Compiling ident_case v1.0.1
    Checking subtle v2.6.1
   Compiling unicase v2.8.1
    Checking unsafe-libyaml v0.2.11
   Compiling parking_lot_core v0.9.10
    Checking rustls-webpki v0.103.3
   Compiling object v0.36.7
    Checking saphyr v0.0.6
   Compiling mime_guess v2.0.5
    Checking dirs v5.0.1
    Checking webpki-roots v1.0.0
    Checking sync_wrapper v1.0.2
    Checking minimal-lexical v0.2.1
    Checking typed-arena v2.0.2
    Checking shell-words v1.1.0
    Checking adler2 v2.0.0
   Compiling rustix v1.0.7
    Checking inventory v0.3.20
    Checking dyn-clone v1.0.20
    Checking gimli v0.31.1
    Checking path-clean v1.0.1
    Checking mime v0.3.17
    Checking winnow v0.7.14
   Compiling thiserror v1.0.69
    Checking openssl-probe v0.1.6
    Checking tower-layer v0.3.3
    Checking regex v1.12.2
    Checking ipnet v2.11.0
    Checking scopeguard v1.2.0
    Checking rustls-native-certs v0.8.1
    Checking jaq-core v2.2.1
    Checking nom v7.1.3
   Compiling synstructure v0.13.2
error[E0282]: type annotations needed
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/jaq-core-2.2.1/src/filter.rs:421:36
    |
421 |                     Box::new(move |x| box_once(Ok(if x.as_bool() { x } else { y.clone() }))),
    |                                    ^                 - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
421 |                     Box::new(move |x: /* Type */| box_once(Ok(if x.as_bool() { x } else { y.clone() }))),
    |                                     ++++++++++++

   Compiling darling_core v0.20.11
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling thiserror-impl v2.0.12
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
   Compiling tokio-macros v2.5.0
For more information about this error, try `rustc --explain E0282`.
error: could not compile `jaq-core` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
